<resources>
    <string name="app_name">MonthFinalTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_example">11 mcd, Bishkek 11 10</string>
    <string name="delivery">Delivery</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="pickup">Pickup</string>
    <string name="curbside">Curbside</string>
    <string name="catering">Catering</string>
    <string name="takeaways">Takeaways</string>
    <string name="grocery">Grocery</string>
    <string name="convenience">Convenience</string>
    <string name="_66_stores_open">66 stores Open</string>
    <string name="burger_craze">Burger Craze</string>
    <string name="open">OPEN</string>
    <string name="_30_40_min">30 - 40 min</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="rate_example">4.9</string>
    <string name="people_rated_example">(5146)</string>
    <string name="delivery_free">Delivery: FREE</string>
    <string name="minimum_256">Minimum: 256$</string>
    <string name="_6_4_km_away">6.4 km away</string>
</resources>