<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/food_iv"
        android:layout_width="wrap_content"
        android:layout_height="194dp"
        android:src="@drawable/burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/food_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alata"
        android:text="@string/burger_craze"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/food_iv"
        app:layout_constraintTop_toBottomOf="@id/food_iv" />

    <ImageView
        android:id="@+id/dot_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:src="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@id/open_closed_tv"
        app:layout_constraintEnd_toStartOf="@id/open_closed_tv"
        app:layout_constraintStart_toEndOf="@id/food_name_tv"
        app:layout_constraintTop_toTopOf="@id/open_closed_tv" />

    <TextView
        android:id="@+id/open_closed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:fontFamily="@font/alata"
        android:text="@string/open"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/food_name_tv"
        app:layout_constraintStart_toEndOf="@id/food_name_tv"
        app:layout_constraintTop_toTopOf="@id/food_name_tv" />

    <TextView
        android:id="@+id/delivery_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/alata"
        android:padding="6dp"
        android:text="@string/_30_40_min"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/open_closed_tv"
        app:layout_constraintEnd_toEndOf="@id/food_iv"
        app:layout_constraintStart_toEndOf="@id/open_closed_tv"
        app:layout_constraintTop_toTopOf="@id/open_closed_tv" />


    <TextView
        android:id="@+id/rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/star_rate"
        android:drawablePadding="6dp"
        android:fontFamily="@font/alata"
        android:text="@string/rate_example"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/food_name_tv"
        app:layout_constraintTop_toBottomOf="@id/food_name_tv" />

    <TextView
        android:id="@+id/people_rated_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_rated_example"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/rating_tv"
        app:layout_constraintStart_toEndOf="@id/rating_tv"
        app:layout_constraintTop_toTopOf="@id/rating_tv" />

    <TextView
        android:id="@+id/delivery_status_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_free"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/rating_tv"
        app:layout_constraintTop_toBottomOf="@id/rating_tv" />

    <ImageView
        android:id="@+id/dot_view_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/dot_hint"
        app:layout_constraintBottom_toBottomOf="@id/delivery_status_tv"
        app:layout_constraintStart_toEndOf="@id/delivery_status_tv"
        app:layout_constraintTop_toTopOf="@id/delivery_status_tv" />

    <TextView
        android:id="@+id/delivery_price_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/minimum_256"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/delivery_status_tv"
        app:layout_constraintStart_toEndOf="@id/dot_view_two"
        app:layout_constraintTop_toTopOf="@id/delivery_status_tv" />

    <TextView
        android:id="@+id/distance_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/location_icon"
        android:text="@string/_6_4_km_away"
        app:layout_constraintBottom_toBottomOf="@id/delivery_price_tv"
        app:layout_constraintEnd_toEndOf="@id/delivery_time_tv"
        app:layout_constraintStart_toStartOf="@id/delivery_time_tv"
        app:layout_constraintTop_toTopOf="@id/delivery_price_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>